updated times/code to be in 12-hour format

--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
         <div class="calHead"></div>
         <div id="blocker" class="wrap">
             <ul class="time_table">
-                <li class="time start-800">8:00
-                <li class="time start-900">9:00
-                <li class="time start-1000">10:00
-                <li class="time start-1100">11:00
-                <li class="time start-1200">12:00
-                <li class="time start-1300">13:00
-                <li class="time start-1400">14:00
-                <li class="time start-1500">15:00
-                <li class="time start-1600">16:00
-                <li class="time start-1700">17:00
-                <li class="time start-1800">18:00
-                <li class="time start-1900">19:00
-                <li class="time start-2000">20:00
-                <li class="time start-2100">21:00
-                <li class="time start-2200">22:00
-                <li class="time start-2300">23:00
+                <li class="time start-800">8:00 AM
+                <li class="time start-900">9:00 AM
+                <li class="time start-1000">10:00 AM
+                <li class="time start-1100">11:00 AM
+                <li class="time start-1200">12:00 PM
+                <li class="time start-1300">1:00 PM
+                <li class="time start-1400">2:00 PM
+                <li class="time start-1500">3:00 PM
+                <li class="time start-1600">4:00 PM
+                <li class="time start-1700">5:00 PM
+                <li class="time start-1800">6:00 PM
+                <li class="time start-1900">7:00 PM
+                <li class="time start-2000">8:00 PM
+                <li class="time start-2100">9:00 PM
+                <li class="time start-2200">10:00 PM
+                <li class="time start-2300">11:00 PM
             </ul>
         </div>
         <div id="events" class="event-container"></div>
@@ -72,74 +72,74 @@
                     <input id="beginTime" class="beginbtn">
                     <span class="beginunderline"></span>
                     <div id="beginDrop" class="begin">
-                        <button class="t" value="800">8:00 AM</button>
-                        <button class="t" value="830">8:30 AM</button>
-                        <button class="t" value="900">9:00 AM</button>
-                        <button class="t" value="930">9:30 AM</button>
-                        <button class="t" value="1000">10:00 AM</button>
-                        <button class="t" value="1030">10:30 AM</button>
-                        <button class="t" value="1100">11:00 AM</button>
-                        <button class="t" value="1130">11:30 AM</button>
-                        <button class="t" value="1200">12:00 PM</button>
-                        <button class="t" value="1230">12:30 PM</button>
-                        <button class="t" value="1300">1:00 PM</button>
-                        <button class="t" value="1330">1:30 PM</button>
-                        <button class="t" value="1400">2:00 PM</button>
-                        <button class="t" value="1430">2:30 PM</button>
-                        <button class="t" value="1500">3:00 PM</button>
-                        <button class="t" value="1530">3:30 PM</button>
-                        <button class="t" value="1600">4:00 PM</button>
-                        <button class="t" value="1630">4:30 PM</button>
-                        <button class="t" value="1700">5:00 PM</button>
-                        <button class="t" value="1730">5:30 PM</button>
-                        <button class="t" value="1800">6:00 PM</button>
-                        <button class="t" value="1830">6:30 PM</button>
-                        <button class="t" value="1900">7:00 PM</button>
-                        <button class="t" value="1930">7:30 PM</button>
-                        <button class="t" value="2000">8:00 PM</button>
-                        <button class="t" value="2030">8:30 PM</button>
-                        <button class="t" value="2100">9:00 PM</button>
-                        <button class="t" value="2130">9:30 PM</button>
-                        <button class="t" value="2200">10:00 PM</button>
-                        <button class="t" value="2230">10:30 PM</button>
-                        <button class="t" value="2300">11:00 PM</button>
+                        <button class="t" value="8">8:00 AM</button>
+                        <button class="t" value="8.5">8:30 AM</button>
+                        <button class="t" value="9">9:00 AM</button>
+                        <button class="t" value="9.5">9:30 AM</button>
+                        <button class="t" value="10">10:00 AM</button>
+                        <button class="t" value="10.5">10:30 AM</button>
+                        <button class="t" value="11">11:00 AM</button>
+                        <button class="t" value="11.5">11:30 AM</button>
+                        <button class="t" value="12">12:00 PM</button>
+                        <button class="t" value="12.5">12:30 PM</button>
+                        <button class="t" value="13">1:00 PM</button>
+                        <button class="t" value="13.5">1:30 PM</button>
+                        <button class="t" value="14">2:00 PM</button>
+                        <button class="t" value="14.5">2:30 PM</button>
+                        <button class="t" value="15">3:00 PM</button>
+                        <button class="t" value="15.5">3:30 PM</button>
+                        <button class="t" value="16">4:00 PM</button>
+                        <button class="t" value="16.5">4:30 PM</button>
+                        <button class="t" value="17">5:00 PM</button>
+                        <button class="t" value="17.5">5:30 PM</button>
+                        <button class="t" value="18">6:00 PM</button>
+                        <button class="t" value="18.5">6:30 PM</button>
+                        <button class="t" value="19">7:00 PM</button>
+                        <button class="t" value="19.5">7:30 PM</button>
+                        <button class="t" value="20">8:00 PM</button>
+                        <button class="t" value="20.5">8:30 PM</button>
+                        <button class="t" value="21">9:00 PM</button>
+                        <button class="t" value="21.5">9:30 PM</button>
+                        <button class="t" value="22">10:00 PM</button>
+                        <button class="t" value="22.5">10:30 PM</button>
+                        <button class="t" value="23">11:00 PM</button>
                     </div>
                 </div>
 
                 <div class="endclass">
                     <input id="endTime" class="endbtn">
                     <div id="endDrop" class="end">
-                        <button class="t2" value="800">8:00 AM</button>
-                        <button class="t2" value="830">8:30 AM</button>
-                        <button class="t2" value="900">9:00 AM</button>
-                        <button class="t2" value="930">9:30 AM</button>
-                        <button class="t2" value="1000">10:00 AM</button>
-                        <button class="t2" value="1030">10:30 AM</button>
-                        <button class="t2" value="1100">11:00 AM</button>
-                        <button class="t2" value="1130">11:30 AM</button>
-                        <button class="t2" value="1200">12:00 PM</button>
-                        <button class="t2" value="1230">12:30 PM</button>
-                        <button class="t2" value="1300">1:00 PM</button>
-                        <button class="t2" value="1330">1:30 PM</button>
-                        <button class="t2" value="1400">2:00 PM</button>
-                        <button class="t2" value="1430">2:30 PM</button>
-                        <button class="t2" value="1500">3:00 PM</button>
-                        <button class="t2" value="1530">3:30 PM</button>
-                        <button class="t2" value="1600">4:00 PM</button>
-                        <button class="t2" value="1630">4:30 PM</button>
-                        <button class="t2" value="1700">5:00 PM</button>
-                        <button class="t2" value="1730">5:30 PM</button>
-                        <button class="t2" value="1800">6:00 PM</button>
-                        <button class="t2" value="1830">6:30 PM</button>
-                        <button class="t2" value="1900">7:00 PM</button>
-                        <button class="t2" value="1930">7:30 PM</button>
-                        <button class="t2" value="2000">8:00 PM</button>
-                        <button class="t2" value="2030">8:30 PM</button>
-                        <button class="t2" value="2100">9:00 PM</button>
-                        <button class="t2" value="2130">9:30 PM</button>
-                        <button class="t2" value="2200">10:00 PM</button>
-                        <button class="t2" value="2230">10:30 PM</button>
-                        <button class="t2" value="2300">11:00 PM</button>
+                        <button class="t2" value="8">8:00 AM</button>
+                        <button class="t2" value="8.5">8:30 AM</button>
+                        <button class="t2" value="9">9:00 AM</button>
+                        <button class="t2" value="9.5">9:30 AM</button>
+                        <button class="t2" value="10">10:00 AM</button>
+                        <button class="t2" value="10.5">10:30 AM</button>
+                        <button class="t2" value="11">11:00 AM</button>
+                        <button class="t2" value="11.5">11:30 AM</button>
+                        <button class="t2" value="12">12:00 PM</button>
+                        <button class="t2" value="12.5">12:30 PM</button>
+                        <button class="t2" value="13">1:00 PM</button>
+                        <button class="t2" value="13.5">1:30 PM</button>
+                        <button class="t2" value="14">2:00 PM</button>
+                        <button class="t2" value="14.5">2:30 PM</button>
+                        <button class="t2" value="15">3:00 PM</button>
+                        <button class="t2" value="15.5">3:30 PM</button>
+                        <button class="t2" value="16">4:00 PM</button>
+                        <button class="t2" value="16.5">4:30 PM</button>
+                        <button class="t2" value="17">5:00 PM</button>
+                        <button class="t2" value="17.5">5:30 PM</button>
+                        <button class="t2" value="18">6:00 PM</button>
+                        <button class="t2" value="18.5">6:30 PM</button>
+                        <button class="t2" value="19">7:00 PM</button>
+                        <button class="t2" value="19.5">7:30 PM</button>
+                        <button class="t2" value="20">8:00 PM</button>
+                        <button class="t2" value="20.5">8:30 PM</button>
+                        <button class="t2" value="21">9:00 PM</button>
+                        <button class="t2" value="21.5">9:30 PM</button>
+                        <button class="t2" value="22">10:00 PM</button>
+                        <button class="t2" value="22.5">10:30 PM</button>
+                        <button class="t2" value="23">11:00 PM</button>
                     </div>
                 </div>
             </div>
