centered popup and put close btn

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div id="events" class="event-container"></div>
         <div id="popup" class="popClass">
-
+            <a id="popClose" class="fa-sharp fa-solid fa-xmark"></a>
             <input id="eventInput" class="eventName" type="text" placeholder="Event Name">
             <span class="underline"></span>
             <div class="fromTo" id="eventTime">
